[project]
name = "agent-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Usman GM", email = "muhammadusman75425965etc@gamil.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.14",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
]

[project.scripts]
agent-streamlit = "agent_streamlit:main"
global = "agent_streamlit.script:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
